# schema-language

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  build.rs  flake.nix  result-1
docs/: syntax-redesign-proposal.md
examples/: emit_artifacts.rs
schema-language-cc/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  skills.md
schema-language-cc/src/: dispatch.rs  error.rs  grammar.rs  lib.rs  validate.rs
schema-language-cc/tests/: dispatch.rs  grammar.rs  validate.rs
schemas/: builtin-macros.macro-library  core.schema  reference-grammar.nota  root.schema  spirit-min.schema
src/: core.rs  declarative.rs  engine.rs  environment.rs  expansion.rs  identifier.rs  identity.rs  instance.rs  lib.rs  lineage.rs  macros.rs  module.rs  raw.rs  reference_resolver_generated.rs  resolution.rs  schema.rs  source.rs  upgrade.rs  view.rs
tests/: big_examples.rs  collections.rs  core_projection.rs  design_examples.rs  environment.rs  family_declarations.rs  generics.rs  identifier_substrate.rs  identity.rs  impl_catalog.rs  import_unification.rs  indirection_projection.rs  instance_schema_render.rs  legacy_reference_pipeline.rs  lineage.rs  lowering.rs  macro_exploration.rs  operator_271_closed_claims.rs  qualified_contract_roots.rs  raw_core_schema.rs  reaction.rs  resolution.rs  source_codec.rs  symbol_path.rs  true_schema.rs  typeref_structural_macro.rs  upgrade_pilot.rs
tests/fixtures/big-schemas/: derived-members.schema  imported-mail-consumer.schema  spirit-reactive-large.schema  triad-reactive-large.schema
tests/fixtures/contract-roots/consumer/schema/: lib.schema
tests/fixtures/contract-roots/meta-signal-lojix/schema/: lib.schema
tests/fixtures/contract-roots/signal-lojix/schema/: lib.schema
tests/fixtures/design/: same-name-payload-variant.schema
tests/fixtures/impl-catalog/: body-optional.schema  fused-markers.schema  trait-method-sigs.schema  unresolved-target.schema
tests/fixtures/import-consumer/schema/: lib.schema
tests/fixtures/import-generic-consumer/schema/: lib.schema
tests/fixtures/lowering/: explicit-repeated-variant.schema  self-tagged-variant.schema
tests/fixtures/marker-core/schema/: mail.schema
tests/fixtures/nested-runtime/schema/: nexus.schema  sema.schema
tests/fixtures/nested-signal/schema/: lib.schema
tests/fixtures/plane-crate/schema/: nexus.schema  sema.schema  signal.schema
tests/fixtures/raw-core/: core.schema  non-map-root.schema  odd-map.schema
tests/fixtures/reaction/schema/: reaction.schema  spirit-nexus-concrete.schema  spirit-nexus.schema
tests/fixtures/source-codec/: duplicate-inline-and-namespace.schema  duplicate-inline-fields.schema  family-declarations.schema  later-inline-payloads.schema  namespace-enum-bare-variants.schema  namespace-inline-enum-variants.schema  nested-router-namespace.schema  reference-fields.schema  relations.schema  root-header-bare-names.schema  root-inline-payloads.schema  root-payload-field-declarations.schema  stream-relations.schema  structural-variant-nodes.schema  trailing-namespace-reference.schema  unsupported-three-object-variant.schema
tests/fixtures/spirit-crate/schema/: lib.schema
