[workspace]
resolver = "2"

[package]
name         = "schema-language"
version      = "0.3.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/schema-language"
description  = "Build-time .schema parser and lowering bridge for TrueSchema staging."
publish      = false

[lib]
name = "schema_language"
path = "src/lib.rs"

[dependencies]
blake3 = "1"
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", rev = "89dc3c85a9ff96d4e4d53accfd867df672cae5a8" }
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror = "2"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
