[workspace]
members  = ["schema-language-cc"]
resolver = "2"

[package]
name         = "schema-language"
version      = "0.2.1"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/schema-language"
description  = "Build-time .schema parser and lowering bridge for TrueSchema staging."
publish      = false
build        = "build.rs"

[lib]
name = "schema_language"
path = "src/lib.rs"

[dependencies]
blake3 = "1"
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", rev = "ce7c564de0a0518eaa1938d55dccc460a67cadb4" }
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror = "2"

# Build-time only: schema-language-cc generates schema-language's parenthesis-reference
# dispatch from the canonical ReferenceGrammar; it never links into the
# library. A workspace `path` dep, not a `git` dep — schema-language-cc is co-located
# as a workspace member, not a sibling repo.
[build-dependencies]
schema-language-cc = { path = "schema-language-cc" }
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", rev = "ce7c564de0a0518eaa1938d55dccc460a67cadb4" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
