[package]
name        = "schema-language-cc"
version     = "0.1.0"
edition     = "2024"
description = "The schema-language compiler-compiler: typed data that generates the build-time schema-language resolver."

[dependencies]
nota    = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
proc-macro2  = "1"
quote        = "1"
syn          = { version = "2", features = ["full"] }
prettyplease = "0.2"
thiserror    = "2"

[lints.rust]
unsafe_code = "forbid"
